# UTI

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  iscxvpn2016_ur20.yaml  iscxvpn2016_ur20_enhanced.yaml  iscxvpn2016_ur20_length_conditional.yaml  iscxvpn2016_ur20_sanitized.yaml  iscxvpn2016_ur20_sanitized_arcface.yaml  iscxvpn2016_ur20_sanitized_steps.yaml  iscxvpn2016_ur20_v2.yaml  iscxvpn2016_ur20_v2_rich.yaml  iscxvpn2016_ur20_v2_rich_grouped.yaml  iscxvpn2016_ur20_v2_rich_raw.yaml  iscxvpn2016_ur20_v3.yaml  iscxvpn2016_ur20_v3_no_pseudo.yaml  iscxvpn2016_ur20_v3_seed43.yaml  iscxvpn2016_ur20_v3_seed44.yaml  iscxvpn2016_ur40.yaml  iscxvpn2016_ur40_enhanced.yaml  iscxvpn2016_ur40_length_conditional.yaml  iscxvpn2016_ur40_sanitized.yaml  iscxvpn2016_ur60.yaml  iscxvpn2016_ur60_enhanced.yaml  iscxvpn2016_ur60_length_conditional.yaml  iscxvpn2016_ur60_sanitized.yaml
src/uti_mpc/: __init__.py  benchmark.py  config.py  evaluate.py  preprocess.py  train.py  utils.py
src/uti_mpc/data/: __init__.py  augmentation.py  buckets.py  dataset.py  flow.py  labels.py  sampler.py  sanitization.py  splits.py
src/uti_mpc/engine/: checkpoint.py  features.py  runtime.py
src/uti_mpc/losses/: __init__.py  arcface.py  information_geometry.py  protomargin.py  subcenter.py
src/uti_mpc/metrics/: __init__.py  open_set.py
src/uti_mpc/models/: __init__.py  bgi_cnn.py  factory.py  (+6 more)
tests/: test_evaluate_diagnostics.py  test_flow.py  test_labels.py  test_length_conditional.py  test_metrics.py  test_model_and_loss.py  test_smoke_training.py  test_splits.py
